force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
    <label>訪問</label>
    <nameField>
        <displayFormat>{YYYY}-{MM}-{DD}-{000000}</displayFormat>
        <label>訪問名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>