force-app/main/default/objects/Visit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>取引先名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>訪問</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>