force-app/main/default/objects/Visit__c/fields/EndDatetime__c.field-meta.xml
<CustomField>
    <fullName>EndDatetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>終了時刻</label>
    <type>DateTime</type>
</CustomField>