force-app/main/default/objects/Visit__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>訪問場所</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自宅</fullName>
            </value>
            <value>
                <fullName>勤務先</fullName>
            </value>
            <value>
                <fullName>カフェ</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>