force-app/main/default/objects/Visit__c/fields/NextAction__c.field-meta.xml
<CustomField>
    <fullName>NextAction__c</fullName>
    <label>次回アクション</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>