force-app/main/default/objects/Visit__c/fields/Overview__c.field-meta.xml
<CustomField>
    <fullName>Overview__c</fullName>
    <label>概要</label>
    <type>TextArea</type>
</CustomField>