force-app/main/default/objects/Visit__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>目的</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>新製品紹介</fullName>
            </value>
            <value>
                <fullName>フォローアップ</fullName>
            </value>
            <value>
                <fullName>クレーム対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>