force-app/main/default/objects/Visit__c/fields/RelatedOpportunity__c.field-meta.xml
<CustomField>
    <fullName>RelatedOpportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>訪問</relationshipLabel>
    <relationshipName>Vists</relationshipName>
    <type>Lookup</type>
</CustomField>