force-app/main/default/objects/Visit__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <label>報告</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>