force-app/main/default/objects/Visit__c/fields/Results__c.field-meta.xml
<CustomField>
    <fullName>Results__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>訪問結果</label>
    <type>TextArea</type>
</CustomField>