force-app/main/default/objects/Visit__c/fields/StartDatetime__c.field-meta.xml
<CustomField>
    <fullName>StartDatetime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>開始時刻</label>
    <type>DateTime</type>
</CustomField>