force-app/main/default/objects/Visit__c/fields/TestField2__c.field-meta.xml
<CustomField>
    <fullName>TestField2__c</fullName>
    <label>テスト項目2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>