force-app/main/default/objects/Visit__c/listViews/End_of_visit.listView-meta.xml
<ListView>
    <fullName>End_of_visit</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>終了</value>
    </filters>
    <label>訪問終了</label>
</ListView>