force-app/main/default/objects/Visit__c/listViews/Visit_Schedule.listView-meta.xml
<ListView>
    <fullName>Visit_Schedule</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>予定</value>
    </filters>
    <label>訪問予定</label>
</ListView>